--- a/index.html
+++ b/index.html
@@ -167,4 +167,20 @@
       <div class="footer-copyright text-center py-3 text-white">© 2019 Trilogy Education Services, a 2U, Inc. brand. All Rights Reserved.</div>        
     </footer>
 </body>
+<!--register the  service worker, tell the browser we are using a service worker and where to find it-->
+<script>
+  (function() {
+    //if statement checks to see if the service worker exists on the global navigator object 
+    //the navigator object conatins information about a browser a visitor is using among this data is a property that determines whether or not the brwoser has support for that service worker
+    if("serviceWorker" in navigator) {
+      //cannot use absolute path or it will break deployed application 
+      navigator.serviceWorker.register("./service-worker.js")
+      .then(() => console.log("service worker registered!"))
+      .catch(error => console.log("service worker registration failed!:", error))
+    }
+    //last pair of paranthesis immediately invoke the function, this function is not part of global space 
+    //the isntant the function is defined javascript will execute it immediately
+    //this is a IIFE immediately evoke function expression
+  })();
+</script>
 </html>
